==> world-direct/mbed-os/targets/TARGET_WIZNET/TARGET_W7500x/serial_api.c <==
#include "mbed_assert.h"
#include "serial_api.h"
#include "cmsis.h"
#include "pinmap.h"
#include <string.h>
#include "PeripheralPins.h"
#include "W7500x_uart.h"
#define UART_NUM (3)

void serial_init(serial_t *obj, PinName tx, PinName rx)
{
    // Determine the UART to use (UART_1, UART_2, ...)
    UARTName uart_tx = (UARTName)pinmap_peripheral(tx, PinMap_UART_TX);
    UARTName uart_rx = (UARTName)pinmap_peripheral(rx, PinMap_UART_RX);

    // Get the peripheral name (UART_1, UART_2, ...) from the pin and assign it to the object
    obj->uart = (UARTName)pinmap_merge(uart_tx, uart_rx);

    MBED_ASSERT(obj->uart != (UARTName)NC);

    // Enable USART clock
    if (obj->uart == UART_0) {
        obj->index = 0;
    }

    if (obj->uart == UART_1) {
        obj->index = 1;
    }

    if (obj->uart == UART_2) {
    	obj->index = 2;
    }

    // Configure the UART pins
    pinmap_pinout(tx, PinMap_UART_TX);
    pinmap_pinout(rx, PinMap_UART_RX);
    if (tx != NC) {
        pin_mode(tx, PullUp);
    }
    if (rx != NC) {
        pin_mode(rx, PullUp);
    }

    // Configure UART
    obj->baudrate = 9600;
    obj->databits = UART_WordLength_8b;
    obj->stopbits = UART_StopBits_1;
    obj->parity   = UART_Parity_No;

    obj->pin_tx = tx;
    obj->pin_rx = rx;


    init_uart(obj);

    // For stdio management
    if (obj->uart == STDIO_UART) {
        stdio_uart_inited = 1;
        memcpy(&stdio_uart, obj, sizeof(serial_t));
    }
}

void serial_free(serial_t *obj)
{
    // Reset UART and disable clock
    if (obj->uart == UART_0) {
    }

    if (obj->uart == UART_1) {
    }
    if (obj->uart == UART_2) {
    }

    serial_irq_ids[obj->index] = 0;
}

void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits)
{
    if (data_bits == 7) {
        obj->databits = UART_WordLength_7b;
    } else {
        obj->databits = UART_WordLength_8b;
    }

    switch (parity) {
        case ParityOdd:
        case ParityForced0:
            obj->parity = UART_Parity_Odd;
            break;
        case ParityEven:
        case ParityForced1:
            obj->parity = UART_Parity_Even;
            break;
        default: // ParityNone
            obj->parity = UART_Parity_No;
            break;
    }

    if (stop_bits == 2) {
        obj->stopbits = UART_StopBits_2;
    } else {
        obj->stopbits = UART_StopBits_1;
    }

    init_uart(obj);
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable)
{
    IRQn_Type irq_n = (IRQn_Type)0;


    if (obj->uart == UART_2)
    {
        irq_n = UART2_IRQn;

        if (enable){
            if (irq == RxIrq){
                S_UART_ITConfig(S_UART_CTRL_RXI,ENABLE);
            } else {
                S_UART_ITConfig(S_UART_CTRL_TXI,ENABLE);
            }
            NVIC_ClearPendingIRQ(irq_n);
            NVIC_EnableIRQ(irq_n);
        } else { // disable
            S_UART_ITConfig((S_UART_CTRL_RXI|S_UART_CTRL_TXI),DISABLE);
            NVIC_DisableIRQ(irq_n);
        }
    }
    else
    {
        UART = (UART_TypeDef *)(obj->uart);
        
        if (obj->uart == UART_0) {
            irq_n = UART0_IRQn;
        }

        if (obj->uart == UART_1) {
            irq_n = UART1_IRQn;
        }

        if (enable) {
            if (irq == RxIrq) {
                UART_ITConfig(UART,UART_IT_FLAG_RXI,ENABLE);
            } else { // TxIrq
                UART_ITConfig(UART,UART_IT_FLAG_TXI,ENABLE);
            }

            NVIC_ClearPendingIRQ(irq_n);
            NVIC_EnableIRQ(irq_n);
        } else { // disable
            UART_ITConfig(UART,(UART_IT_FLAG_RXI|UART_IT_FLAG_TXI),DISABLE);
            NVIC_DisableIRQ(irq_n);
        }
    }
}

int serial_getc(serial_t *obj)
{
    if (obj->uart == UART_2)
    {
        S_UART_TypeDef *uart = (S_UART_TypeDef *)(obj->uart);

        while( (uart->STATE & S_UART_STATE_RX_BUF_FULL) == 0 );
        return (uint16_t)(uart->DATA);
    }
    else
    {
        UART_TypeDef *uart = (UART_TypeDef *)(obj->uart);
        while(uart->FR & UART_FR_RXFE);

        return (uart->DR & 0xFF);
    }
}

void serial_putc(serial_t *obj, int c)
{
    if (obj->uart == UART_2)
    {
        S_UART_TypeDef *uart = (S_UART_TypeDef *)(obj->uart);

        while(uart->STATE & S_UART_STATE_TX_BUF_FULL);
        uart->DATA = (uint32_t)(c & (uint16_t)0xFF);
    }
    else
    {
        UART_TypeDef *uart = (UART_TypeDef *)(obj->uart);

        uart->DR = (uint32_t)(c & (uint16_t)0xFF);
        while(uart->FR & UART_FR_BUSY);
    }
}

int serial_readable(serial_t *obj)
{
    int status;

    if (obj->uart == UART_2)
    {
        S_UART_TypeDef *uart = (S_UART_TypeDef *)(obj->uart);
        status = ((uart->STATE & S_UART_STATE_RX_BUF_FULL) ? 1 : 0);
    }
    else
    {
        UART_TypeDef *uart = (UART_TypeDef *)(obj->uart);
        // Check if data is received
        status = ((uart->FR & UART_FR_RXFE) ? 0: 1);
    }

    return status;
}

int serial_writable(serial_t *obj)
{
    int status;

    if (obj->uart == UART_2)
    {
        S_UART_TypeDef *uart = (S_UART_TypeDef *)(obj->uart);
        status = ((uart->STATE & S_UART_STATE_TX_BUF_FULL) ? 0 : 1);
    }
    else
    {
        UART_TypeDef *uart = (UART_TypeDef *)(obj->uart);
        // Check if data is transmitted
        status = ((uart->FR & UART_FR_BUSY) ? 0: 1);
    }
    return status;
}
