==> ARMmbed/mbed-os/targets/TARGET_ublox/TARGET_HI2110/serial_api.c <==
#include "mbed_assert.h"
#include "serial_api.h"
#include "pinmap.h"
#include "cmsis.h"
#define UART0_REG (*(volatile uart_ctrl_t *) UART0_BASE)
#define UART1_REG (*(volatile uart_ctrl_t *) UART1_BASE)
#define UART0_CTRL  (1 << 3)
#define UART1_CTRL  (1 << 4)
#define UARTLP_CTRL (1 << 6)
#define MIN_NUM_UART_DATA_BITS 5
#define MAX_NUM_UART_DATA_BITS 8
#define REGISTER_DATA_BITS(x) ((x) - MIN_NUM_UART_DATA_BITS)
#define NUM_UART_STOP_BITS_1 1
#define NUM_UART_STOP_BITS_2 2

void serial_init(serial_t *obj, PinName tx, PinName rx)
{
    uint32_t clock = CLK_FREQ_DIG_CLKS;

    /* There are two and a half UARTs on the chip. The normal
     * configuration is to use the LP_UART for Rx and UART0 for
     * Tx.  This gives maximal power saving in that the chip can
     * wake up on receipt of data. However, this only works if the
     * data rate is 9600 because that's the only data rate that
     * the 32 kHz (i.e. RTC) clock driving the LP UART can support.
     *
     * So, if the data rate is 9600, use the LP_UART/UART0
     * combination, otherwise use UART0 for both Rx and Tx.  However,
     * we don't know the data rate at this point so assume LP_UART
     * (as this works at the default baud rate) and we can change
     * our minds later.
     *
     * There is another serial port, UART1, which is normally used
     * by the modem processor to send out debug.  We only initialise
     * that here if the Tx pin is UART1_TX. */

    /* Wait for the clock to be stable */
    while ((clock < CLK_FREQ_LOWTARGET) || (clock > CLK_FREQ_HIGHTARGET)) {
        clock = CLK_FREQ_DIG_CLKS;
    }

    if (tx == UART1_TX) {
        /* Use UART1 for Rx and Tx */
        obj->config = SERIAL_CONFIG_UART1_RX_UART1_TX;
    } else {
        /* Use LP_UART for Rx, UART0 for Tx */
        obj->config = SERIAL_CONFIG_UARTLP_RX_UART0_TX;
    }

    obj->rx_pin = rx;
    obj->tx_pin = tx;
    init_config(obj);

    /* TODO: set rx pin Pull mode ? */

    /* set default baud rate and format */
    serial_baud(obj, 9600);
    serial_format(obj, 8, ParityNone, 1);

    if (tx == UART0_TX) {
        /* The UART0 pins are the stdio pins */
        stdio_uart_inited = 1;
        stdio_uart = *obj;
    }
}

void serial_free(serial_t *obj)
{
    if (obj->tx_pin == UART0_TX) {
        stdio_uart_inited = 0;
    }

    serial_irq_ids[obj->index] = 0;

    /* Release the port HW */
    deinit_config(obj);
}

void serial_format(serial_t *obj, int data_bits, SerialParity parity, int stop_bits)
{
    bool lp_also = false;

    MBED_ASSERT(data_bits >= MIN_NUM_UART_DATA_BITS);
    MBED_ASSERT(data_bits <= MAX_NUM_UART_DATA_BITS);
    MBED_ASSERT(stop_bits >= NUM_UART_STOP_BITS_1);
    MBED_ASSERT(stop_bits <= NUM_UART_STOP_BITS_2);

    /* The LP UART is different to UARTs 0 and 1 so deal with it
     * explicitly when required */
    if (obj->config == SERIAL_CONFIG_UARTLP_RX_UART0_TX) {
        lp_also = true;
    }

    /* Disable UART while writing to control registers */
    obj->reg_base->UARTCR &= ~(1 << 0);

    /* Set data bits (bits 5 and 6 of the UART0/1 register, bits 18 and 19 of the LP UART register) */
    obj->reg_base->UARTLCR_H = (obj->reg_base->UARTLCR_H & ~(0x03 << 5)) | (REGISTER_DATA_BITS(data_bits) << 5);
    if (lp_also) {
        LP_UART_CTRL = (LP_UART_CTRL & ~(0x03 << 18)) | (REGISTER_DATA_BITS(data_bits) << 18);
    }
    obj->format.data_bits = (uint8_t) data_bits;

    /* Set stop bits (bit 7 of the UART0/1 register) (there is no such setting for the LP UART) */
    if (stop_bits == NUM_UART_STOP_BITS_1) {
        /* Clear 2-stop-bits bit */
        obj->reg_base->UARTLCR_H &= ~(1 << 7);
    } else {
        /* Set 2-stop-bits bit */
        obj->reg_base->UARTLCR_H |= 1 << 7;
    }
    obj->format.stop_bits = (uint8_t) stop_bits;

    /* Set parity */
    switch (parity) {
        case ParityNone:
        {
            /* Disable parity */
            obj->reg_base->UARTLCR_H &= ~0x02;
            if (lp_also)
            {
                LP_UART_CTRL &= ~(1 << 24);
            }
        }
        break;
        case ParityOdd:
        {
            /* Set even bit and enable parity */
            obj->reg_base->UARTLCR_H = (obj->reg_base->UARTLCR_H | (1 << 3)) | (1 << 2);
            if (lp_also)
            {
                LP_UART_CTRL |= (1 << 24) | (1 << 25);
            }
        }
        break;
        case ParityEven:
        {
            /* Clear even bit and enable parity */
            obj->reg_base->UARTLCR_H = (obj->reg_base->UARTLCR_H & ~(1 << 3)) | (1 << 2);
            if (lp_also)
            {
                LP_UART_CTRL &= ~(1 << 25);
                LP_UART_CTRL |= 1 << 24;
            }
        }
        break;
        default:
        {
            MBED_ASSERT(false);
        }
        break;
    }

    /* Enable the UART again */
    obj->reg_base->UARTCR |= 1 << 0;

    obj->format.parity = (uint8_t) parity;
    obj->format_set = true;
}

void serial_irq_set(serial_t *obj, SerialIrq irq, uint32_t enable)
{
    bool lp_also = false;

    if (obj->config == SERIAL_CONFIG_UARTLP_RX_UART0_TX) {
        lp_also = true;
    }

    /* Disable UART while writing to control registers */
    obj->reg_base->UARTCR &= ~(1 << 0);

    if (enable) {
        switch (irq) {
            case RxIrq:
            {
                /* Bit 4 for Rx and bit 6 for Rx Timeout */
                obj->reg_base->UARTIMSC |= (1 << 4) | (1 << 6);
                if (lp_also)
                {
                    /* "Word Received" IRQ */
                    LP_UART_CTRL |= 1 << 23;
                }
                obj->irq_rx_setting = IRQ_ON;
                irq_enable(obj);
            }
            break;
            case TxIrq:
            {
                /* Bit 5 */
                obj->reg_base->UARTIMSC |= 1 << 5;
                obj->irq_tx_setting = IRQ_ON;
                irq_enable(obj);
            }
            break;
            default:
            {
                MBED_ASSERT(false);
            }
            break;
        }
    } else {
        switch (irq) {
            case RxIrq:
            {
                /* Bit 4  for Rx and bit 6 for Rx Timeout */
                obj->reg_base->UARTIMSC &= ~((1 << 4) | (1 << 6));
                if (lp_also)
                {
                    /* "Word Received" IRQ */
                    LP_UART_CTRL &= ~(1 << 23);
                }
                obj->irq_rx_setting = IRQ_OFF;
            }
            break;
            case TxIrq:
            {
                /* Bit 5 */
                obj->reg_base->UARTIMSC &= ~(1 << 5);
                obj->irq_tx_setting = IRQ_OFF;
            }
            break;
            default:
            {
                MBED_ASSERT(false);
            }
            break;
        }

        if ((obj->irq_rx_setting == IRQ_OFF) && (obj->irq_tx_setting == IRQ_OFF)) {
            irq_disable(obj);
        }
    }

    /* Enable the UART again */
    obj->reg_base->UARTCR |= 1 << 0;
}

int serial_getc(serial_t *obj)
{
    uint8_t data = 0;

    /* Block until there is data to read */
    while (!serial_readable(obj)) {}

    /* Read the data */
    switch (obj->config) {
        case SERIAL_CONFIG_UARTLP_RX_UART0_TX:
        {
            data = (uint8_t) LP_UART_DATA;
        }
        break;
        case SERIAL_CONFIG_UART0_RX_UART0_TX:
        case SERIAL_CONFIG_UART1_RX_UART1_TX:
        {
            data = (uint8_t) obj->reg_base->UARTDR;
        }
        break;
        default:
        {
            MBED_ASSERT(false);
        }
        break;
    }

    return (int) data;
}

void serial_putc(serial_t *obj, int c)
{
    /* Block until there is room to write */
    while (!serial_writable(obj)) {}

    /* Write the data */
    obj->reg_base->UARTDR = (uint8_t) c;
}

int serial_readable(serial_t *obj)
{
    bool readable = false;

    switch (obj->config) {
        case SERIAL_CONFIG_UARTLP_RX_UART0_TX:
        {
            /* Check the status register, bits 8 to 10 indicate
             * the number of Rx bytes (make sure it's the status
             * register not the data register as a read from that
             * register would clear the Rx interrupt) */
            readable = (((LP_UART_STATUS >> 8) & 0x07) != 0);
        }
        break;
        case SERIAL_CONFIG_UART0_RX_UART0_TX:
        case SERIAL_CONFIG_UART1_RX_UART1_TX:
        {
            /* Check the Rx FIFO Empty bit */
            readable = ((obj->reg_base->UARTFR & (1 << 4)) != (1 << 4));
        }
        break;
        default:
        {
            MBED_ASSERT(false);
        }
        break;
    }

    return (int) readable;
}

int serial_writable(serial_t *obj)
{
    /* Check the "UART TX FIFO full" bit:
     * only if this is 0 can we transmit  */
    return (obj->reg_base->UARTFR & (1 << 5)) != (1 << 5);
}
